--- a/style.css
+++ b/style.css
@@ -281,6 +281,36 @@ li {
   }
 }
 
+.dispo {
+  display: block;
+  color: rgb(163 163 163);
+  font-weight: bolder;
+  text-align: center;
+  margin-top: -100px;
+  margin-bottom: 200px;
+  padding: 50px;
+  line-height: 40px;
+  border: 4px solid rgb(163 163 163);
+  box-shadow: 2px 2px 2px 2px #d1b0cc;
+  font-size: 3rem;
+  background-color: whitesmoke;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.dispo p {
+  animation: 1s linear infinite alternate animation;
+}
+
+@keyframes animation {
+  from {
+    transform: translateX—(-30px);
+  }
+  to {
+    transform: translateX(30px);
+  }
+}
+
 #div1 {
   position: absolute;
   top: 900px;
@@ -290,7 +320,7 @@ li {
   color: rgb(67, 65, 65);
   font-size: 2rem;
   line-height: 50px;
-  margin: 10px;
+  margin: 20px;
   padding: 10px;
   text-align: justify;
 }
@@ -336,7 +366,7 @@ iframe {
 
 .footer {
   position: absolute;
-  margin-top: 4200px;
+  margin-top: 4700px;
   left: 0;
   right: 0;
   text-align: center;
@@ -347,7 +377,7 @@ iframe {
 
 .sign {
   position: absolute;
-  margin-top: 4100px;
+  margin-top: 4700px;
   text-align: center;
   letter-spacing: 1px;
   font-size: 0.5rem;
@@ -372,6 +402,17 @@ iframe {
 
 /***
 /*****************************/
+@media screen and (max-width: 1700px) {
+  .dispo {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .dispo {
+    font-size: 1.5rem;
+  }
+}
 
 @media screen and (max-width: 1100px) {
   .word span {
