--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ li {
 
 @keyframes animation {
   from {
-    transform: translateX—(-30px);
+    transform: translateX(-30px);
   }
   to {
     transform: translateX(30px);
