--- a/style.css
+++ b/style.css
@@ -296,8 +296,9 @@ li {
   box-shadow: 2px 2px 2px 2px #d1b0cc;
   font-size: 3rem;
   background-color: whitesmoke;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  justify-content: center;
 }
 
 .dispo p {
