--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   font-family: "Roboto", sans-serif;
   width: 100%;
   background-color: white;
+  margin: 10px;
 }
 
 .btnLink {
@@ -284,7 +285,7 @@ li {
 }
 
 .dispo {
-  display: inline-block;
+  display: block;
   color: rgb(163 163 163);
   font-weight: bolder;
   text-align: center;
@@ -298,7 +299,6 @@ li {
   background-color: whitesmoke;
   margin-left: 30px;
   margin-right: 30px;
-  justify-content: center;
 }
 
 .dispo p {
@@ -335,14 +335,15 @@ li {
   font-size: 4rem;
   border-left: 2px solid gray;
   border-top: 2px solid gray;
-  display: inline;
-  padding-right: 50px;
+  display: block;
+  padding-top: 30px;
   text-shadow: #d1b0cc 2px 2px 2px;
   color: rgb(163 163 163);
+  text-align: center;
 }
 
-#quiJeSuis p {
-  text-align: justify;
+.text {
+  text-align: center;
 }
 
 #carouselExampleIndicators {
@@ -362,6 +363,7 @@ h3 {
 .videonoel {
   margin: 0 auto;
   display: block;
+  max-width: 700px;
 }
 
 table {
@@ -410,7 +412,6 @@ iframe {
 
 .footer {
   position: absolute;
-  margin-top: 5300px;
   left: 0;
   right: 0;
   text-align: center;
@@ -421,7 +422,7 @@ iframe {
 
 .sign {
   position: absolute;
-  margin-top: 5200px;
+  margin-top: 5600px;
   text-align: center;
   letter-spacing: 1px;
   font-size: 0.5rem;
@@ -459,6 +460,9 @@ iframe {
   table {
     font-size: 1.5rem;
   }
+  .sign {
+    margin-top: 5700px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
@@ -484,7 +488,7 @@ iframe {
     margin-top: 450px;
   }
   .sign {
-    margin-top: 4500px;
+    margin-top: 4700px;
   }
   .videonoel,
   iframe,
@@ -511,7 +515,10 @@ iframe {
     height: auto;
   }
   .sign {
-    margin-top: 5000px;
+    margin-top: 4800px;
+  }
+  table {
+    font-size: 1rem;
   }
 }
 
@@ -523,7 +530,7 @@ iframe {
     height: auto;
   }
   table {
-    font-size: 1rem;
+    font-size: 0.7rem;
   }
 }
 
@@ -572,6 +579,9 @@ iframe {
   table {
     font-size: 0.3rem;
   }
+  .sign {
+    margin-top: 5500px;
+  }
 }
 
 @media screen and (max-width: 300px) {
@@ -583,8 +593,5 @@ iframe {
   }
   table {
     font-size: 0.2rem;
-  }
-  .sign {
-    margin-top: 5200px;
   }
 }
