--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ li {
   text-align: center;
   width: 100%;
   font-size: 2rem;
-
   margin-top: 330px;
 }
 .tel,
@@ -315,8 +314,6 @@ li {
 #div1 {
   position: absolute;
   top: 900px;
-  height: auto;
-  width: 100%;
   font-family: "Hind", sans-serif;
   color: rgb(67, 65, 65);
   font-size: 2rem;
@@ -337,6 +334,7 @@ li {
   text-shadow: #d1b0cc 2px 2px 2px;
   color: rgb(163 163 163);
   text-align: center;
+  margin: 40px;
 }
 
 .text {
@@ -346,7 +344,6 @@ li {
 #carouselExampleIndicators {
   margin: 0 auto;
   max-width: 700px;
-  object-fit: cover;
   border: whitesmoke solid 5px;
 }
 
@@ -413,8 +410,6 @@ iframe {
 }
 
 .footer {
-  left: 0;
-  right: 0;
   text-align: center;
   letter-spacing: 1px;
   font-size: 0.5rem;
@@ -422,14 +417,12 @@ iframe {
 }
 
 .sign {
+  display: block;
   margin-top: 6700px;
   text-align: center;
   letter-spacing: 1px;
   font-size: 0.5rem;
   color: #09010a;
-  padding: 20px;
-  background-color: whitesmoke;
-  color: rgb(163 163 163);
 }
 .sign a {
   color: #09010a;
