--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   color: rgb(163 163 163);
   font-family: "Roboto", sans-serif;
   margin: 10px;
+  position: relative;
 }
 
 .btnLink {
@@ -75,10 +76,11 @@ li {
   color: rgb(163 163 163);
   top: 60px;
   text-align: center;
+  justify-content: center;
   width: 100%;
   font-size: 2rem;
-
   margin-top: 330px;
+  margin-left: -12px;
 }
 .tel,
 .mail {
@@ -103,9 +105,10 @@ li {
   justify-content: space-around;
   top: 200px;
   z-index: 1000;
+  margin-left: -12px;
 }
 
-.imgNounou {
+.imgbabysmall {
   border-radius: 50%;
   justify-content: space-around;
   z-index: 1000;
@@ -321,8 +324,9 @@ li {
   color: rgb(67, 65, 65);
   font-size: 2rem;
   line-height: 50px;
-  margin: 20px;
+  margin-left: -12px;
   padding: 10px;
+  justify-content: center;
 }
 
 #quiJeSuis,
@@ -337,6 +341,7 @@ li {
   text-shadow: #d1b0cc 2px 2px 2px;
   color: rgb(163 163 163);
   text-align: center;
+  margin: 40px;
 }
 
 .text {
@@ -413,27 +418,23 @@ iframe {
 }
 
 .footer {
+  position: absolute;
   left: 0;
   right: 0;
   text-align: center;
   letter-spacing: 1px;
   font-size: 0.5rem;
   color: #09010a;
-  margin: 0;
 }
 
 .sign {
-  display: block;
-  margin-top: 6700px;
+  position: absolute;
+  margin-top: 6900px;
   text-align: center;
   letter-spacing: 1px;
   font-size: 0.5rem;
   color: #09010a;
-  padding-top: 20px;
-  background-color: whitesmoke;
   color: rgb(163 163 163);
-  margin-left: 0;
-  margin-right: 0;
 }
 .sign a {
   color: #09010a;
@@ -490,6 +491,14 @@ iframe {
 
 @media screen and (max-width: 900px) {
   .imgbaby {
+    margin-top: 450px;
+  }
+  .imgbabysmall {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+  }
+   {
     margin-top: 450px;
   }
   .sign {
@@ -588,15 +597,15 @@ iframe {
     margin-top: 6900px;
   }
 }
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 390px) {
   .sign {
-    margin-top: 7500px;
+    margin-top: 7100px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 370px) {
   .sign {
-    margin-top: 7700px;
+    margin-top: 7800px;
   }
 }
 
